# crewai-test

./: Dockerfile  README.md  docker-compose.yml
.cursor/rules/: github-actions.mdc  python.mdc
.github/workflows/: docker-build.yml  hello-world.yml
crewai_project/: main.py  requirements.txt
crewai_project/tests/: test_main.py
presales_crew/: .env.example  .gitignore  README.md  pyproject.toml
presales_crew/src/presales_crew/: crew.py  main.py
presales_crew/src/presales_crew/config/: agents.yaml  tasks.yaml
presales_crew/tests/: test_main.py
